--- a/public/contact.html
+++ b/public/contact.html
@@ -18,9 +18,9 @@
 
   <div class="overflow-hidden">
     <!-- header -->
-    <header class="relative">
+    <header>
       <div
-        class="header-menu absolute top-0 left-0 w-[375px] bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        class="header-menu absolute top-0 left-0 w-[375px] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
         <button class="close-menu__btn mb-[150px]">
           <img src="./assets/images/icons/close-icon.svg" alt="close icon" />
         </button>
@@ -53,7 +53,7 @@
         </ul>
         <a class="gray-btn__lg" href="#!">Заказать звонок</a>
       </div>
-      <div class="flex items-center justify-between pt-7 text-sm xl:max-w-[1388px] mx-auto xl:px-0 px-5">
+      <div class="flex items-center justify-between text-sm xl:max-w-[1388px] mx-auto xl:px-0 px-5">
         <button class="open-menu__btn flex items-center md:gap-2.5 md:w-[175px]">
           <img src="./assets/images/icons/hamburger-menu.svg" alt="hamburger-menu" />
           <span class="font-light text-white md:block hidden">меню</span>
@@ -85,19 +85,21 @@
         <div class="container">
           <h1 class="title-lg ReformaGrotesk">Контакты</h1>
 
-          <div class="flex gap-11 mt-[36px]">
+          <div class="flex md:gap-11 gap-[20px] md:mt-[36px] mt-5 md:flex-row flex-col">
             <div class="text-light-brown border-t border-[#B9998478] pt-[13px]">
-              <h3 class="title-xl brown mb-3">Головной офис</h3>
-              <a class="text-[17px] leading-[20.72px] font-semibold block" href="#!">г. Новороссийск, п. Дзержинского,
+              <h3 class="md:title-[54px] text-[40px] uppercase md:leading-[60.16px] leading-[44.56px] font-ReformaGrotesk brown mb-3">Головной офис
+              </h3>
+              <a class="md:text-[17px] text-[15px] leading-[20.72px] font-semibold block" href="#!">г. Новороссийск, п. Дзержинского,
                 244</a>
-              <a class="text-base leading-6 tracking-wide block pt-[14px] pb-2" href="#!">+7 (000) 000-00-00</a>
-              <a class="text-base leading-6 tracking-wide block" href="mailto:mail@pochta.ru">mail@pochta.ru</a>
+              <a class="md:text-base text-sm leading-6 tracking-wide block md:pt-[14px] pt-[10px] md:pb-2 pb-1" href="#!">+7 (000) 000-00-00</a>
+              <a class="md:text-base text-sm leading-6 tracking-wide block" href="mailto:mail@pochta.ru">mail@pochta.ru</a>
             </div>
             <div class="text-light-brown border-t border-[#B9998478] pt-[13px]">
-              <h3 class="title-xl brown mb-3">офис продаж</h3>
-              <a class="text-[17px] leading-[20.72px] font-semibold block" href="#!">г. Новороссийск, п. Дзержинского, 244</a>
-              <a class="text-base leading-6 tracking-wide block pt-[14px] pb-2" href="#!">+7 (000) 000-00-00</a>
-              <a class="text-base leading-6 tracking-wide block" href="mailto:mail@pochta.ru">mail@pochta.ru</a>
+              <h3 class="md:title-[54px] text-[40px] uppercase md:leading-[60.16px] leading-[44.56px] font-ReformaGrotesk brown mb-3">офис продаж</h3>
+              <a class="md:text-[17px] text-[15px] leading-[20.72px] font-semibold block" href="#!">г. Новороссийск, п. Дзержинского,
+                244</a>
+              <a class="md:text-base text-sm leading-6 tracking-wide block md:pt-[14px] pt-[10px] md:pb-2 pb-1" href="#!">+7 (000) 000-00-00</a>
+              <a class="md:text-base text-sm leading-6 tracking-wide block" href="mailto:mail@pochta.ru">mail@pochta.ru</a>
             </div>
           </div>
         </div>
