--- a/public/selecting-number-two.html
+++ b/public/selecting-number-two.html
@@ -77,9 +77,8 @@
       <div class="breadcrumb container">
         <ul>
           <li>
-            <a href="index.html">Главная</a>
+            <a class="breadcrumb-link" href="index.html">Главная</a>
           </li>
-          <img src="./assets/images/icons/next-icon.svg" alt="next icon">
           <li>
             Выбор номера
           </li>
