--- a/public/selecting-number.html
+++ b/public/selecting-number.html
@@ -77,9 +77,8 @@
       <div class="breadcrumb container">
         <ul>
           <li>
-            <a href="index.html">Главная</a>
+            <a class="breadcrumb-link" href="index.html">Главная</a>
           </li>
-          <img src="./assets/images/icons/next-icon.svg" alt="next icon">
           <li>
             Выбор номера
           </li>
@@ -178,11 +177,11 @@
                       <div
                         class="option-box absolute left-[-1px] bg-[#313245] xl:w-[145px] w-[276px] z-50 border border-light-brown hidden divide-y divide-solid border-t rounded-[12px] rounded-t-none">
                         <span
-                          class="option-item block text-sm uppercase pl-[13px] cursor-pointer leading-[18px] py-2">А</span>
+                          class="option-item block text-sm uppercase pl-[20px] cursor-pointer leading-[18px] py-2">А</span>
                         <span
-                          class="option-item block text-sm uppercase pl-[13px] cursor-pointer leading-[18px] py-2">Б</span>
+                          class="option-item block text-sm uppercase pl-[20px] cursor-pointer leading-[18px] py-2">Б</span>
                         <span
-                          class="option-item block text-sm uppercase pl-[13px] cursor-pointer leading-[18px] py-2">В</span>
+                          class="option-item block text-sm uppercase pl-[20px] cursor-pointer leading-[18px] py-2">В</span>
                       </div>
                     </div>
                   </div>
@@ -254,7 +253,7 @@
               типам</button>
           </div>
         </div>
-        <div class="grid-product products-box divide-x xl:divide-solid">
+        <div class="grid-product products-box md:divide-x xl:divide-solid">
           <div class="product-box lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
             <div class="product-top media-hide">
               <div class="flex items-center justify-between text-light-brown">
