added opacity in swiper disabled button

--- a/public/index.html
+++ b/public/index.html
@@ -958,7 +958,7 @@
             <button class="prev-btn md:w-auto w-[32px]">
               <img src="./assets/images/icons/prev-arrow.svg" alt="prev-arrow" />
             </button>
-            <button class="next-btn md:w-auto w-[32px]">
+            <button class="next-btn md:w-auto w-[32px] disabled:opacity-5">
               <img src="./assets/images/icons/next-arrow.svg" alt="next-arrow" />
             </button>
           </div>
