added button hover

--- a/public/index.html
+++ b/public/index.html
@@ -435,7 +435,7 @@
                     type="tel" placeholder="+7 (000) 000-00-00">
                 </div>
                 <button
-                  class="w-full bg-graphite-gray h-10 text-base text-white font-normal font-Muller rounded-[50px]">Получить
+                  class="w-full bg-graphite-gray h-10 text-base text-white font-normal font-Muller rounded-[50px] hover:bg-light-brown hover:text-graphite-gray border duration-300 border-graphite-gray">Получить
                   расчет</button>
               </div>
             </div>
@@ -919,11 +919,11 @@
                 Студия
               </button>
               <button
-                class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+                class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 hover:border-light-brown hover:text-light-brown duration-300 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
                 Однокомнатный
               </button>
               <button
-                class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+                class="flex items-center uppercase justify-center h-[34px] border border-[#FFFFFF99] hover:border-light-brown hover:text-light-brown duration-300 px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
                 двухкомнатный
               </button>
             </div>
@@ -1136,7 +1136,7 @@
                     <span class="text-light-white text-sm leading-6 block font-medium">3 / 8</span>
                   </div>
                 </div>
-                <a class="h-10 flex items-center justify-center font-normal text-sm text-graphite-gray px-[31px] bg-light-brown rounded-[50px]"
+                <a class="h-10 flex items-center justify-center font-normal text-sm text-graphite-gray px-[31px] bg-light-brown rounded-[50px] hover:bg-graphite-gray hover:text-light-brown border border-light-brown duration-300"
                   href="#!">Заказать консультацию</a>
               </div>
             </div>
@@ -1337,7 +1337,7 @@
             <div class="flex items-center justify-between font-Muller text-white md:py-5 py-[13px]">
               <span class="font-light md:text-lg text-sm leading-6">РНС 2023</span>
               <button
-                class="flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
@@ -1347,7 +1347,7 @@
               <span class="font-light md:text-lg text-sm leading-6">Проектная декларация Межсанаторный 03-04-2023
                 Парковка</span>
               <button
-                class="flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
@@ -1357,7 +1357,7 @@
               <span class="font-light md:text-lg text-sm leading-6">Проектная декларация Межсанаторный 10 04 2023
                 МКЖД</span>
               <button
-                class="flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="flex hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
