--- a/public/selecting-number-two.html
+++ b/public/selecting-number-two.html
@@ -696,7 +696,7 @@
           </div>
         </div>
         <button
-          class="rounded-[50px] h-[40px] flex items-center justify-center md:mt-[50px] mt-[38px] mx-auto px-[57px] bg-light-brown text-graphite-gray border border-light-brown">Показать
+          class="rounded-[50px] h-[40px] flex items-center justify-center md:mt-[50px] mt-[38px] mx-auto px-[57px] bg-light-brown text-graphite-gray border border-light-brown hover:bg-graphite-gray hover:text-light-brown duration-300">Показать
           ещё</button>
       </section>
     </main>
