added button hover effect

--- a/public/index.html
+++ b/public/index.html
@@ -979,19 +979,19 @@
         <div
           class="flex md:gap-5 gap-[12px] md:mt-[57px] mt-[30px] md:overflow-hidden overflow-x-auto hidden-scroll overflow-y-hidden">
           <button
-            class="flex items-center uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            class="flex items-center hover:text-white hover:border-white duration-300 uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
             номер-студия
           </button>
           <button
-            class="flex items-center uppercase justify-center whitespace-nowrap h-[34px] border border-white px-5 rounded-[50px] text-white text-sm font-normal">
+            class="flex items-center hover:text-white hover:border-white duration-300 uppercase justify-center whitespace-nowrap h-[34px] border border-white px-5 rounded-[50px] text-white text-sm font-normal">
             1-к номер
           </button>
           <button
-            class="flex items-center uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            class="flex items-center hover:text-white hover:border-white duration-300 uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
             2-к номер
           </button>
           <button
-            class="flex items-center uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
+            class="flex items-center hover:text-white hover:border-white duration-300 uppercase justify-center whitespace-nowrap h-[34px] border border-[#FFFFFF99] px-5 rounded-[50px] text-[#FFFFFF99] text-sm font-normal">
             3-к номер
           </button>
         </div>
