adde cover in img

--- a/public/selecting-number.html
+++ b/public/selecting-number.html
@@ -253,7 +253,7 @@
               типам</button>
           </div>
         </div>
-        <div class="grid-product products-box md:divide-x xl:divide-solid">
+        <div class="grid-product products-box md:divide-y border-b border-light-brown xl:divide-solid">
           <div class="product-box lg:border-r border-t border-b border-[#B9998469] md:pl-8 pl-5 md:pr-6 pr-5 py-6">
             <div class="product-top media-hide">
               <div class="flex items-center justify-between text-light-brown">
