--- a/public/index.html
+++ b/public/index.html
@@ -939,7 +939,7 @@
                   alt="product img" />
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
+                <img class="sm:h-[465px] h-[213px] object-cover" width="100%" height="465" src="assets/images/slide-img-3.png"
                   alt="product img" />
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
@@ -951,7 +951,7 @@
                   alt="product img" />
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] h-[213px]" width="100%" height="465" src="assets/images/slide-img-3.png"
+                <img class="sm:h-[465px] h-[213px] object-cover" width="100%" height="465" src="assets/images/slide-img-3.png"
                   alt="product img" />
               </div>
             </div>
