--- a/public/number.html
+++ b/public/number.html
@@ -205,11 +205,11 @@
           <div class="swiper-container interyer-nomer__swiper lg:mt-14 mt-5">
             <div class="swiper-wrapper">
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465"
                   src="assets/images/slide-img-1.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465"
                   src="assets/images/slide-img-2.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
@@ -217,11 +217,11 @@
                   src="assets/images/slide-img-3.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465"
                   src="assets/images/slide-img-1.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
-                <img class="sm:h-[465px] object-cover h-[213px]" width="100%" height="465"
+                <img class="sm:h-[465px] h-[213px]" width="100%" height="465"
                   src="assets/images/slide-img-2.png" alt="product img">
               </div>
               <div class="swiper-slide sm:h-[465px] h-[213px]">
