--- a/public/apartment.html
+++ b/public/apartment.html
@@ -85,7 +85,7 @@
       <!-- single-room -->
       <section class="single-room text-light-brown">
         <div class="container flex gap-3 md:items-end justify-between pb-7 md:flex-row flex-col">
-          <h1 class="title-lg">квартира</h1>
+          <h1 class="title-lg">Однокомнатный номер</h1>
           <h3 class="title-xs">4.805 млн</h3>
         </div>
         <div class="border-t border-b border-border-color">
@@ -714,3 +714,4 @@
 </body>
 
 </html>
+
