--- a/public/apartment.html
+++ b/public/apartment.html
@@ -21,7 +21,7 @@
     <!-- header -->
     <header>
       <div
-        class="header-menu absolute top-0 left-0 w-[375px] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        class="header-menu absolute h-screen top-0 left-0 md:w-[375px] w-[85%] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
         <button class="close-menu__btn mb-[150px]">
           <img src="./assets/images/icons/close-icon.svg" alt="close icon" />
         </button>
@@ -93,8 +93,8 @@
             <div
               class="lg:border-r md:pt-9 pt-5 lg:pb-[60px] xl:pr-[102px] lg:pr-8 border-border-color lg:space-y-[52px] space-y-5">
               <div class="flex gap-3">
-                <a class="outline-btn" href="#!">Планировка</a>
-                <a class="outline-btn" href="#!">На этаже</a>
+                <a class="outline-btn pt-[2px]" href="#!">Планировка</a>
+                <a class="outline-btn pt-[2px]" href="#!">На этаже</a>
               </div>
               <div
                 class="bg-white lg:w-[565px] w-full sm:h-[584px] h-[342px] px-[14px] flex items-center justify-center">
