--- a/public/contact.html
+++ b/public/contact.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header>
       <div
-        class="header-menu absolute top-0 left-0 w-[375px] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        class="header-menu absolute h-screen top-0 left-0 md:w-[375px] w-[85%] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
         <button class="close-menu__btn mb-[150px]">
           <img src="./assets/images/icons/close-icon.svg" alt="close icon" />
         </button>
