--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- header -->
     <header>
       <div
-        class="header-menu absolute h-screen top-0 left-0 w-[375px] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
+        class="header-menu absolute h-screen top-0 left-0 md:w-[375px] w-[85%] overflow-y-auto overflow-x-hidden bg-light-brown pt-[23px] px-[24px] pb-[35px] -translate-x-full duration-300">
         <button class="close-menu__btn mb-[150px]">
           <img src="./assets/images/icons/close-icon.svg" alt="close icon" />
         </button>
@@ -227,13 +227,13 @@
           <div
             class="font-Muller flex lg-plus:flex-row flex-col lg-plus:space-y-0 space-y-[6px] justify-between mt-[26px]">
             <p
-              class="text-white lg-plus:max-w-[526px] md:leading-6 leading-[18px] font-light md:text-lg text-sm tracking-wide">
+              class="text-white lg-plus:max-w-[526px] md:leading-6 leading-[18px] font-light md:text-lg text-sm md:tracking-wide tracking-[1px]">
               Сложно придумать более идеальную локацию для гостиничного комплекса: у резидентов «Корсакова» будет
               соблюдён
               баланс всех сфер жизни как на территории отеля, так и за его пределами.
             </p>
             <p
-              class="text-[#FFFFFF66] lg-plus:max-w-[526px] md:leading-[22px] leading-[18px] md:text-base text-sm font-normal tracking-wide">
+              class="text-[#FFFFFF66] lg-plus:max-w-[526px] md:leading-[22px] leading-[18px] md:text-base text-sm font-normal md:tracking-wide tracking-[1px]">
               Здесь в ближайшем доступе не только морской берег, но и разнообразная инфраструктура. Шаговая доступность
               магазинов, центров общественного досуга и питания, а также социальных объектов, сделает ваш отдых ещё
               более
@@ -1337,7 +1337,7 @@
             <div class="flex items-center justify-between font-Muller text-white md:py-5 py-[13px]">
               <span class="font-light md:text-lg text-sm leading-6">РНС 2023</span>
               <button
-                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  lg-plus::border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
@@ -1347,7 +1347,7 @@
               <span class="font-light md:text-lg text-sm leading-6">Проектная декларация Межсанаторный 03-04-2023
                 Парковка</span>
               <button
-                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 flex items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  lg-plus::border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
@@ -1357,7 +1357,7 @@
               <span class="font-light md:text-lg text-sm leading-6">Проектная декларация Межсанаторный 10 04 2023
                 МКЖД</span>
               <button
-                class="flex hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
+                class="flex hover:bg-graphite-gray hover:text-light-brown border-light-brown duration-300 items-center gap-[14px] lg-plus:bg-light-brown capitalize justify-center lg-plus:h-[34px] h-[15px] lg-plus:w-fit w-[15px]  lg-plus::border lg-plus:border-light-brown lg-plus:px-5 rounded-[50px] text-graphite-gray text-sm font-normal">
                 <span class="lg-plus:block hidden">Cкачать документ</span>
                 <img class="lg-plus:block hidden" src="./assets/images/icons/download.svg" alt="download">
                 <img class="lg-plus:hidden block min-w-[15px]" src="./assets/images/icons/donwload.svg" alt="download">
